# delta-s3-loader

./: .gitignore  Cargo.toml  README.adoc  config.yml
data/delta/audit_logs/date=2021-03-12/: .part-00000-2254ce65-f690-4875-b088-2476b77e8b44.c000.snappy.parquet.crc  part-00000-2254ce65-f690-4875-b088-2476b77e8b44.c000.snappy.parquet
data/raw/simple/date=2021-03-12/: auditlog-1234.json
src/: config.rs  lambda.rs  main.rs  writer.rs
