[package]
name = "delta-s3-loader"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[dependencies]
deltalake = { git = "https://github.com/delta-io/delta-rs", branch = "main", features = ["s3"] }
lambda_runtime = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.0", features = ["macros"]}
serde = { version = "1", features = ["rc", "derive"]}
