[package]
name = "delta-s3-loader"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[dependencies]
arrow  = "4"
clap = "2"
deltalake = { git = "https://github.com/rtyler/delta-rs", branch = "mixing-in-deltalake_ext", features = ["s3"] }
dotenv = "0.15"
log = "0.4"
parquet = "4"
pretty_env_logger = "0.4"
regex = "1"
rusoto_core = "*"
rusoto_credential = "*"
rusoto_s3 = "*"
serde = { version = "1", features = ["rc", "derive"]}
serde_json = "1"
serde_yaml = "0.8"
serde_regex = "1"
tokio = { version = "1.0", features = ["macros"]}

# Needed for the lambda feature
lambda_runtime = { version = "0.3", optional = true }
aws_lambda_events = { version = "0.4", optional = true }


[features]
lambda = ["lambda_runtime", "aws_lambda_events"]
