[package]
name = "delta-s3-loader"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[dependencies]
anyhow = "*"
# This crate is not only usesful for Lambda since it has an S3Event structure
# which is useful in the standalone mode as well
aws_lambda_events = "*"
arrow  = "4"
clap = "2"
deltalake = { git = "https://github.com/rtyler/delta-rs", branch = "features-for-rustls", features = ["s3-rustls"] }
dotenv = "0.15"
form_urlencoded = "1"
log = "0.4"
parquet = "4"
pretty_env_logger = "0.4"
regex = "1"
rusoto_core = { version = "*", default-features = false, features = ["rustls"] }
rusoto_credential = "*"
rusoto_sqs = { version = "*", default-features = false, features = ["serialize_structs", "deserialize_structs", "rustls"]}
rusoto_s3 = { version = "*", default-features = false, features = ["rustls"]}
serde = { version = "1", features = ["rc", "derive"]}
serde_json = "1"
serde_yaml = "0.8"
serde_regex = "1"
tokio = { version = "1.0", features = ["macros"]}

# Needed for the lambda feature
lambda_runtime = { version = "0.3", optional = true }

[features]
lambda = ["lambda_runtime"]
